# probo-backend

./: .env  Cargo.toml
migrations/: 20250519061729_opinion_table.down.sql  20250519061729_opinion_table.up.sql  20250519141323_adding_price_column_for_trades.down.sql  20250519141323_adding_price_column_for_trades.up.sql  20250519141850_add_price_check_for_trade.down.sql  20250519141850_add_price_check_for_trade.up.sql  20250521133300_quantity_field_in_trades_table.down.sql  20250521133300_quantity_field_in_trades_table.up.sql  20250522032405_balance_field_added_to_user.down.sql  20250522032405_balance_field_added_to_user.up.sql  20250526144032_hold_balance_in_user.down.sql  20250526144032_hold_balance_in_user.up.sql  20250710065536_balance_change_trigger.down.sql  20250710065536_balance_change_trigger.up.sql  20250710075100_change_timezone_of_timestamp.up.sql  20250710075229_change_timezone_of_timestamp.up.sql  20250710075759_change_timezone_of_timestamp.up.sql
src/: main.rs  state.rs
src/db/: db.rs  mod.rs  opinion.rs  trade.rs  user.rs
src/middlewares/: auth.rs
src/routers/: auth.rs  mod.rs  opinion.rs  order.rs  router.rs  trade.rs  user.rs
