[package]
name = "opinion_trading"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = {version="0.8.4", features = ["macros"]}
chrono = {version="0.4.41", features = ["serde"]}
dotenv = "0.15.0"
serde = {version="1.0.219", features = ["derive"]}  
serde_json = "1.0.140"
sqlx = {version="0.8.5", features = ["runtime-tokio-native-tls", "postgres","macros","chrono"]}
tokio = {version="1.45.0", features = ["full"]}
uuid = "1.16.0"
