[package]
name = "opinion_trading"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = {version="0.8.4", features = ["macros"]}
chrono = {version="0.4.41", features = ["serde"]}
dotenv = "0.15.0"
jsonwebtoken = "9.3.1"
serde = {version="1.0.219", features = ["derive"]}  
validator = { version = "0.17", features = ["derive"] }
serde_json = "1.0.140"
sqlx = {version="0.8.5", features = ["runtime-tokio-native-tls", "postgres","macros","chrono","uuid"]}
tokio = {version="1.45.0", features = ["full"]}
tower-http ={version= "0.6.6", features=["cors"]}
uuid = {version="1.16.0",features=["serde"]}
